Just added <a> links to every page to homepage.

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -50,6 +50,6 @@
   <li> Bake in the preheated oven for 30 minutes. Remove cover and bake until bubbling and cheese is browned, about 15 more minutes. Let stand for 10 minutes before serving.</li>
     </ol>
 
-    
+    <a href="../index.html">Return to main page</a>
 </body>
 </html>
