--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -41,6 +41,8 @@
         <li>Drain broccoli florets and add to pasta, gently toss to coat, and season to taste with salt and pepper. Serve immediately.</li>
     </ol>
 
+    <a href="../index.html">Return to main page</a>
+
     
 </body>
 </html>
