--- a/recipes/cookies.html
+++ b/recipes/cookies.html
@@ -40,6 +40,6 @@
         <li>Drop the dough onto cookie sheets and bake until the cookies are firm.</li>
     </ol>
 
-    
+    <a href="../index.html">Return to main page</a>
 </body>
 </html>
