Add styles for all pages

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Project - Recipes</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     
-    <h1>Odin Recipes</h1>
+    <h1 class="title">Odin Recipes</h1>
     <picture><img src="./images/odin.webp" alt="The Odin Project"></picture>
-    <ul>
+    <ul class="recipes-select">
         <li><a href="recipes/cookies.html">Pumpkin Chocolate Chip Cookies</a></li>
         <li><a href="recipes/lasagna.html">Butternut Squash Lasagna</a></li>
         <li><a href="recipes/pasta.html">Pumpkin Chocolate Chip Cookies</a></li>
