--- a/recipes/cookies.html
+++ b/recipes/cookies.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chocolate Chips Cookies</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
 
-    <h1>Pumpkin Chocolate Chip Cookies</h1>
+    <h1 class="title">Pumpkin Chocolate Chip Cookies</h1>
     <picture><img src="../images/cookies.webp" alt="Chocolate Chips"></picture>
 
-    <h2>Description</h2>
-    <p>These pumpkin chocolate chip cookies are perfect for those of us who love all things pumpkin pie and chocolate. These cake-like cookies are always a big hit. I think they taste best when they are cold from the refrigerator.</p>
+    <h2 class="title">Description</h2>
+    <p class="desc-element">These pumpkin chocolate chip cookies are perfect for those of us who love all things pumpkin pie and chocolate. These cake-like cookies are always a big hit. I think they taste best when they are cold from the refrigerator.</p>
 
-    <h2>Ingredients</h2>
-    <ul>
+    <h2 class="title">Ingredients</h2>
+    <ul class="desc-element">
         <li><strong>Sugar:</strong> A cup of white sugar lends the perfect amount of sweetness. </li>
         <li><strong>Oil:</strong> A neutral oil, such as vegetable oil, lends moisture without imparting flavor. </li>
         <li><strong>Egg:</strong> An egg adds even more moisture and helps bind the dough together. </li>
@@ -31,15 +32,15 @@
         <li><strong>Pumpkin:</strong> Use store-bought canned pumpkin or homemade pumpkin puree. </li>
     </ul>
 
-    <h2>Steps</h2>
-    <p>You'll find the full, step-by-step instructions below but her's a brief overview of what you can expect when you make pumpkin chocolate chip cookies:</p>
-    <ol>
+    <h2 class="title">Steps</h2>
+    <p class="desc-element descrip  ">You'll find the full, step-by-step instructions below but her's a brief overview of what you can expect when you make pumpkin chocolate chip cookies:</p>
+    <ol class="desc-element">
         <li>Combine the wet ingredients. Dissolve the baking soda in milk, then stir it in. </li>
         <li>Combine the dry ingredients, then stir the mixture into the wet ingredients. </li>
         <li>Stir in the walnuts, chocolate, and vanilla. </li>
         <li>Drop the dough onto cookie sheets and bake until the cookies are firm.</li>
     </ol>
 
-    <a href="../index.html">Return to main page</a>
+    <a class="title" id="aaa" href="../index.html">Return to main page</a>
 </body>
 </html>
