--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Butternut Squash Lasagna</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
 
-    <h1>Butternut Squash Lasagna</h1>
+    <h1 class="title">Butternut Squash Lasagna</h1>
     <picture><img src="../images/lasagna.webp" alt="Chocolate Chips"></picture>
 
-    <h2>Description</h2>
-    <p>This butternut squash lasagna makes a satisfying vegetarian dinner any day of the week. It can take a while to put together, but it's always worth it!</p>
+    <h2 class="title">Description</h2>
+    <p class="desc-element">This butternut squash lasagna makes a satisfying vegetarian dinner any day of the week. It can take a while to put together, but it's always worth it!</p>
 
-    <h2>Ingredients</h2>
-    <ul>
+    <h2 class="title">Ingredients</h2>
+    <ul class="desc-element">
         <li>1 butternut squash, halved and seeded</li>
         <li>1 tablespoon olive oil, divided, or as needed</li>
         <li>1 (8 ounce) package sliced fresh mushrooms</li>
@@ -33,9 +34,9 @@
         <li>2 cups shredded mozzarella cheese</li>
     </ul>
 
-    <h2>Steps</h2>
-    <p>You'll find the full, step-by-step instructions below but her's a brief overview of what you can expect when you make pumpkin chocolate chip cookies:</p>
-    <ol>
+    <h2 class="title">Steps</h2>
+    <p class="desc-element descrip">You'll find the full, step-by-step instructions below but her's a brief overview of what you can expect when you make pumpkin chocolate chip cookies:</p>
+    <ol class="desc-element">
     <li>Preheat the oven to 450 degrees F (230 degrees C). Line a baking sheet with aluminum foil.</li>
   <li>Place squash, cut-side up, on the prepared baking sheet. Cover squash with aluminum foil.</li>
   <li> Bake in the preheated oven until squash is tender, 45 minutes to 1 hour 15 minutes.</li>
@@ -50,6 +51,6 @@
   <li> Bake in the preheated oven for 30 minutes. Remove cover and bake until bubbling and cheese is browned, about 15 more minutes. Let stand for 10 minutes before serving.</li>
     </ol>
 
-    <a href="../index.html">Return to main page</a>
+    <a class="title" id="aaa" href="../index.html">Return to main page</a>
 </body>
 </html>
