--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -4,24 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Broccoli Cheddar Mac and Cheese</title>
+    <link rel="stylesheet" href="../styles.css   ">
 </head>
 <body>
 
-    <h1>Broccoli Cheddar Mac and Cheese</h1>
+    <h1 class="title">Broccoli Cheddar Mac and Cheese</h1>
     <picture><img src="../images/pasta.webp" alt="Chocolate Chips"></picture>
 
-    <h2>Description</h2>
-    <p>This broccoli mac and cheese adds bright green broccoli to an easy pasta in a Cheddar and Parmesan cheese sauce. Macaroni and cheese is such an easy dish to customize, and this is a great way to get your veggies from this classic comfort food.</p>
+    <h2 class="title">Description</h2>
+    <p class="desc-element">This broccoli mac and cheese adds bright green broccoli to an easy pasta in a Cheddar and Parmesan cheese sauce. Macaroni and cheese is such an easy dish to customize, and this is a great way to get your veggies from this classic comfort food.</p>
 
-    <h2>Ingredients</h2>
-    <ul>
+    <h2 class="title">Ingredients</h2>
+    <ul class="desc-element">
         <li>4 cups water</li>
         <li>4 teaspoons chicken soup base (such as Better than Bouillon®)</li>
         <li>1 1/2 cups evaporated milk</li>
         <li>1/4 cup heavy whipping cream</li>
         <li>1/2 teaspoon Worcestershire sauce</li>
         <li>1/2 teaspoon Dijon mustard</li>
-        <li>1 teaspoon paprika</li>
+        <li>1 teaspoon
         <li>1/2 teaspoon cayenne pepper (optional)</li>
         <li>1 pinch salt</li>
         <li>1 pound pasta shells or elbow macaroni</li>
@@ -32,16 +33,16 @@
         <li>salt and freshly ground black pepper to taste</li>
     </ul>
 
-    <h2>Steps</h2>
-    <p>You'll find the full, step-by-step instructions below but her's a brief overview of what you can expect when you make pumpkin chocolate chip cookies:</p>
-    <ol>
+    <h2 class="title">Steps</h2>
+    <p class="desc-element descrip">You'll find the full, step-by-step instructions below but her's a brief overview of what you can expect when you make pumpkin chocolate chip cookies:</p>
+    <ol class="desc-element">
         <li>Add 4 cups water and soup base to a large saucepan over medium-high heat; stir to dissolve soup base. Stir in evaporated milk, whipping cream, Worcestershire sauce, Dijon mustard, paprika, cayenne, and pinch salt.</li>
         <li>Add in pasta, cover, and bring to a boil. Reduce heat to medium-low, and cook, stirring frequently, until pasta is tender with a bite, 8 to 11 minutes. Stir in Cheddar cheese and Parmesan cheese; allow to melt into the sauce.</li>
         <li>Place broccoli and 3 tablespoons water in a microwave-safe container. Cover; steam broccoli on High in the microwave until tender, about 4 minutes.</li>
         <li>Drain broccoli florets and add to pasta, gently toss to coat, and season to taste with salt and pepper. Serve immediately.</li>
     </ol>
 
-    <a href="../index.html">Return to main page</a>
+    <a class="title" id="aaa" href="../index.html">Return to main page</a>
 
     
 </body>
