Modify styles.css - #aaa selector

--- a/recipes/cookies.html
+++ b/recipes/cookies.html
@@ -41,6 +41,6 @@
         <li>Drop the dough onto cookie sheets and bake until the cookies are firm.</li>
     </ol>
 
-    <a class="title" id="aaa" href="../index.html">Return to main page</a>
+    <a id="aaa" href="../index.html">Return to main page</a>
 </body>
 </html>
