--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -51,6 +51,6 @@
   <li> Bake in the preheated oven for 30 minutes. Remove cover and bake until bubbling and cheese is browned, about 15 more minutes. Let stand for 10 minutes before serving.</li>
     </ol>
 
-    <a class="title" id="aaa" href="../index.html">Return to main page</a>
+    <a id="aaa" href="../index.html">Return to main page</a>
 </body>
 </html>
