--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -42,7 +42,7 @@
         <li>Drain broccoli florets and add to pasta, gently toss to coat, and season to taste with salt and pepper. Serve immediately.</li>
     </ol>
 
-    <a class="title" id="aaa" href="../index.html">Return to main page</a>
+    <a id="aaa" href="../index.html">Return to main page</a>
 
     
 </body>
